# reasonFuzz

./: .gitattributes  .gitignore  LICENSE  README.md  azure-pipelines.yml  dune-project  log.txt  package.json  test.json
.ci/: esy-build-steps.yml  publish-build-cache.yml  restore-build-cache.yml
esy.lock/: index.json
executable/: dune
test/: RunTests.re  RunTestsCI.re  dune  testReasonFuzzyMatching.re
test.esy.lock/: index.json
test/Benchmark/: FzyBench.re  FzyBenchArray.re  FzyBenchList.re  FzyItemBench.re  GeneralMatchBench.re  PathMatchBench.re  dune
test/FzyTests/: TestFramework.re  TestFzy.re  TestFzyArray.re  TestFzyList.re  dune
test/GenericFuzzyTests/: TestArray.re  TestFramework.re  TestGenericFuzzyIndex.re  TestGenericFuzzyNonIndex.re  TestPathFuzzyIndex.re  TestPathFuzzyNonIndex.re  dune
test/PathFuzzyTests/: TestFramework.re  TestPathFuzzyIndex.re  TestPathFuzzyNonIndex.re  dune
